[package]
name = "residat"
version = "0.1.0"
authors = ["descawed <residat@descawed.com>"]
edition = "2024"
description = "A Rust crate for working with the files and in-memory data structures of the classic Resident Evil games"
readme = "README.md"
repository = "https://github.com/descawed/residat"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
derive_more = { version = "2.0.1", features = ["full"] }
enum-map = "2.7.3"
num_enum = "0.7.5"